trocada de professora para auxiliar de cozinha

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <tr>
             <td>Edeleusa</td>
             <td>45</td>
-            <td> professora</td>
+            <td> auxiliar de cozinha</td>
         </tr>
         <tr>
             <td>Edivaldo</td>
