trocado para programador

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <tr>
             <td>Maicon</td>
             <td>21</td>
-            <td>Estudande e trabalho</td>
+            <td>Programador</td>
         </tr>
 
         <tr>
