Mudou de profissao o edivaldo

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             <td> auxiliar de cozinha</td>
         </tr>
         <tr>
-            <td>Edivaldo</td>
+            <td>Edivalo</td>
             <td>45</td>
-            <td>Funcionario da prefeitura</td>
+            <td>tratorista</td>
         </tr>
 
     </tbody>
